<resources>
    <string name="app_name">EMS Employee Tracker</string>
    <string name="app_title">Field Force Management</string>
    <string name="app_short_description">It is a long established fact that a\nwill be distracted by the readable\ncontent of a page when looking</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="task_details">Write some details about the task</string>
    <string name="task_details_title">Task Description</string>
    <string name="task_name_title">Name the task</string>
    <string name="due_date_title">Due Date</string>
    <string name="task_priority_title">Task Priority</string>

    <string-array name="programming_languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>CPP</item>
    </string-array>
</resources>
