<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="Task Name"
            android:inputType="textPersonName"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_taskdetails_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_details_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_task_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/task_details"
            android:background="@drawable/custom_input"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:lines="3"
            android:minHeight="48dp"
            android:padding="12dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_datePicker"
            style="?android:spinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:onClick="openDatePicker"
            android:text="JAN 01 2022"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:strokeColor="#000000"
            app:strokeWidth="2dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_taskpriority_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_priority_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_task_priority"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:contentDescription="@string/task_priority_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="Save" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Cancel" />
    </LinearLayout>
</LinearLayout>